@@ -65,6 +65,13 @@ public class DecimalType extends NumberType<BigDecimal>
 
     DecimalType() {super(ComparisonType.CUSTOM);} // singleton
 
+    @Override
+    public boolean allowsEmpty()
+    {
+        return true;
+    }
+
+    @Override
     public boolean isEmptyValueMeaningless()
     {
         return true;
